--- a/website-layout/calendar.html
+++ b/website-layout/calendar.html
@@ -9,22 +9,23 @@
         .calendar{
             display: grid;
             grid-template-columns: repeat(7, 1fr);
+            grid-template-rows: 35px repeat(5, 75%);
             row-gap: 20px;
             column-gap: 10px;
         }
-        .day{
-            
-        }
-        .date{
+        .date, .day{
             background-color: skyblue;
-            height: 50px;
+            /* height: 50px; */
             font-size: 2em;
             display: flex;
             justify-content: center;
             align-items: center;
         }
-        .other-month{
+        .other-month, .day{
             background-color: lightgray;
+        }
+        .day{
+            font-size: 1.5em;
         }
     </style>
 </head>
