--- a/website-layout/grid.html
+++ b/website-layout/grid.html
@@ -1,53 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grid Explore</title>
+    <title>gird</title>
     <style>
-        .containar {
+        .container{
             display: grid;
-            /* grid-template-columns: repeat(4, 1fr); */
-            justify-content: center;
-            /* justify-items: center; */
-            grid-template-columns: 200px 200px 200px 200px;
-            grid-column-gap: 50px;
-            grid-row-gap: 10px;
+            grid-template-columns: 2fr 1fr;
+            grid-template-rows: repeat(3, 200px);
+            gap: 20px;
         }
-
-        .item {
-            border: 1px solid indianred;
-            font-size: 25px;
+        .box{
+            background-color: bisque;
+            border-radius: 10px;
+        }
+        #box-3{
+            grid-column: 1;
+            grid-row: span 2;
+        }
+        #box-2{
+            grid-column: 2;
+            grid-row: span 3;
         }
     </style>
 </head>
-
 <body>
-    <h2>Explore grid layout</h2>
-    <div class="containar">
-        <div class="item">item-1</div>
-        <div class="item">item-2</div>
-        <div class="item">item-3</div>
-        <div class="item">item-4</div>
-        <div class="item">item-5</div>
-        <div class="item">item-6</div>
-        <div class="item">item-7</div>
-        <div class="item">item-8</div>
-        <div class="item">item-9</div>
-        <div class="item">item-10</div>
-        <div class="item">item-11</div>
-        <div class="item">item-12</div>
-        <div class="item">item-13</div>
-        <div class="item">item-14</div>
-        <div class="item">item-15</div>
-        <div class="item">item-16</div>
-        <div class="item">item-17</div>
-        <div class="item">item-18</div>
-        <div class="item">item-19</div>
-        <div class="item">item-20</div>
+    <div class="container">
+        <div class="box" id="box-1">
+            <h2>box-1</h2>
+        </div>
+        <div class="box" id="box-2">
+            <h2>box-2</h2>
+        </div>
+        <div class="box" id="box-3">
+            <h2>box-3</h2>
+        </div>
     </div>
 </body>
-
 </html>
