--- a/website-layout/responsive-web.html
+++ b/website-layout/responsive-web.html
@@ -1,12 +1,212 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive</title>
+    <title>Responsive Website</title>
+    <!-- 
+        1. viewposrt meta tag
+        2. css relative unit
+        3. responsive image (fluid image)
+        4. body max-width and margin auto
+        5. responsive split screen using flex(2 column section)
+        6. grid responsive (multi column)
+        7. responsive menu (bootstarp responsive)
+     -->
+    <style>
+        body {
+            max-width: 800px;
+            border: 2px solid red;
+            margin: 0 auto;
+        }
+
+        h1 {
+            font-size: 10vw;
+        }
+
+        .tiger img {
+            width: 100%;
+        }
+
+        .container-two {
+            display: flex;
+        }
+
+        .container-two .split {
+            width: 50%;
+        }
+
+        .split img {
+            width: 100%;
+        }
+
+        .container {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 10px;
+        }
+        .food{
+            border: 2px solid indianred;
+            padding: 10px;
+            border-radius: 5px;
+        }
+        .food img{
+            width: 100%;
+        }
+        @media screen and (max-width:576px) {
+            .container-two {
+                flex-direction: column-reverse;
+            }
+
+            .container-two .split {
+                width: 100%;
+            }
+            .container{
+                grid-template-columns: repeat(1, 1fr);
+            }
+        }
+        @media screen and (min-width:577px) and (max-width:700px){
+            .container{
+                grid-template-columns: repeat(2, 1fr);
+            }
+        }
+    </style>
 </head>
+
 <body>
-    
+    <section>
+        <h1>This is my website responsive layout</h1>
+    </section>
+    <section class="tiger">
+        <h3>Tiger</h3>
+        <img src="img/tiger.jpg" alt="">
+    </section>
+    <section>
+        <h2>Two Parts</h2>
+        <div class="container-two">
+            <div class="split">
+                <img src="img/food.jpeg" alt="">
+            </div>
+            <div class="split">
+                <img src="img/tiger.jpg" alt="">
+            </div>
+        </div>
+    </section>
+    <section>
+        <h2>Multi column</h2>
+        <div class="container">
+            <div class="food">
+                <img src="img/food.jpeg" alt="">
+                <h2>item-1</h2>
+                <h4>price:100 taka</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum blanditiis praesentium at quam
+                    similique. Commodi ratione labore quasi corrupti, quod tenetur? Dolorum necessitatibus quam, tempora
+                    rerum cum sequi nemo quibusdam.</p>
+                <button>Order Now</button>
+            </div>
+            <div class="food">
+                <img src="img/food.jpeg" alt="">
+                <h2>item-2</h2>
+                <h4>price:200 taka</h4>
+                <p>Quas consectetur consequatur repellendus illum obcaecati aliquam omnis, laboriosam labore nobis ipsum
+                    hic incidunt eos, iste magnam excepturi? Quisquam, ratione unde! Culpa aut voluptate quam, officiis
+                    harum odio totam veniam.</p>
+                <button>Order Now</button>
+            </div>
+            <div class="food">
+                <img src="img/food.jpeg" alt="">
+                <h2>item-3</h2>
+                <h4>price:300 taka</h4>
+                <p>Perspiciatis sunt ipsum minima ut. Sit, saepe corporis obcaecati eveniet officiis beatae
+                    exercitationem, nihil quo fugiat porro praesentium recusandae illo fugit cum. Accusantium nobis odit
+                    corporis nemo magnam earum amet.</p>
+                <button>Order Now</button>
+            </div>
+            <div class="food">
+                <img src="img/food.jpeg" alt="">
+                <h2>item-4</h2>
+                <h4>price:400 taka</h4>
+                <p>Autem obcaecati, dicta voluptas molestias, facilis quasi vitae beatae repellendus, similique quam
+                    illo illum soluta veniam nobis perferendis placeat magni id ipsum iure. Est error pariatur eaque
+                    iusto dolore ab.</p>
+                <button>Order Now</button>
+            </div>
+            <div class="food">
+                <img src="img/food.jpeg" alt="">
+                <h2>item-5</h2>
+                <h4>price:500 taka</h4>
+                <p>Repellat, nemo omnis? Aliquam modi voluptas distinctio iste! Iusto veniam nam non impedit, distinctio
+                    ullam fuga commodi. Ratione numquam, ipsam nulla, error esse excepturi eum consectetur reiciendis id
+                    perferendis porro!</p>
+                <button>Order Now</button>
+            </div>
+            <div class="food">
+                <img src="img/food.jpeg" alt="">
+                <h2>item-6</h2>
+                <h4>price:600 taka</h4>
+                <p>Autem, officiis provident perspiciatis in sunt, quis hic maxime eveniet maiores illo, dolorum omnis
+                    dolorem ipsa pariatur labore laborum molestiae? Ipsum voluptatum harum distinctio. Aspernatur
+                    deleniti fuga sed quae necessitatibus?</p>
+                <button>Order Now</button>
+            </div>
+            <div class="food">
+                <img src="img/food.jpeg" alt="">
+                <h2>item-7</h2>
+                <h4>price:700 taka</h4>
+                <p>Sequi, magnam quam. Similique, veritatis totam at dolorem, a aliquid consequatur ratione cumque
+                    delectus sed repudiandae distinctio ad. Porro distinctio vel ipsam mollitia molestiae asperiores
+                    nisi ullam nobis error aperiam?</p>
+                <button>Order Now</button>
+            </div>
+            <div class="food">
+                <img src="img/food.jpeg" alt="">
+                <h2>item-8</h2>
+                <h4>price:800 taka</h4>
+                <p>Eius obcaecati doloremque expedita nostrum amet voluptatum temporibus exercitationem eligendi
+                    inventore iste soluta odio pariatur, culpa, dignissimos eos vitae facere laudantium quia assumenda
+                    deserunt dicta veniam officiis natus. Repellendus, voluptatibus.</p>
+                <button>Order Now</button>
+            </div>
+            <div class="food">
+                <img src="img/food.jpeg" alt="">
+                <h2>item-9</h2>
+                <h4>price:900 taka</h4>
+                <p>Corporis sapiente vero provident fugit ab cupiditate, rem consequatur autem libero molestias veniam
+                    asperiores iure saepe quos eveniet quas recusandae id distinctio magnam quidem possimus. Odit
+                    quisquam molestias mollitia fugiat?</p>
+                <button>Order Now</button>
+            </div>
+            <div class="food">
+                <img src="img/food.jpeg" alt="">
+                <h2>item-10</h2>
+                <h4>price:1000 taka</h4>
+                <p>Suscipit reprehenderit alias quo quasi totam dicta quos minima eligendi molestiae possimus incidunt
+                    dolores temporibus, eaque nulla perspiciatis voluptatem, ratione nostrum laudantium consectetur, cum
+                    exercitationem? Perferendis, illo ratione! Dolorum, consequatur.</p>
+                <button>Order Now</button>
+            </div>
+            <div class="food">
+                <img src="img/food.jpeg" alt="">
+                <h2>item-11</h2>
+                <h4>price:1100 taka</h4>
+                <p>Accusamus soluta sapiente quis voluptate veniam nisi! Praesentium aspernatur perspiciatis sit quidem
+                    distinctio repellat velit. Vel eum velit, obcaecati exercitationem maiores, eaque, voluptate
+                    excepturi quidem similique corrupti iure dicta ducimus!</p>
+                <button>Order Now</button>
+            </div>
+            <div class="food">
+                <img src="img/food.jpeg" alt="">
+                <h2>item-12</h2>
+                <h4>price:1200 taka</h4>
+                <p>Dolorum non praesentium numquam! Animi quasi provident praesentium odit natus non sunt ipsam commodi
+                    doloremque, nobis quaerat nulla officiis velit id architecto eius ullam eum, aliquid reiciendis
+                    sapiente quam inventore.</p>
+                <button>Order Now</button>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
