--- a/website-layout/grid.html
+++ b/website-layout/grid.html
@@ -24,6 +24,14 @@
             grid-column: 2;
             grid-row: span 3;
         }
+        @media screen and (max-width: 576px) {
+            .container{
+                grid-template-columns: repeat(1, 1fr);
+            }
+            #box-2{
+                grid-column: 1;
+            }
+        }
     </style>
 </head>
 <body>
